migration/sql-server/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sql-server
spec:
  ingressClassName: nginx
  rules:
  - host: sql.s9.devopscloud.link
    http:
      paths:
      - backend:
          service:
            name: sql-server
            port:
              number: 8000
        path: /
        pathType: Prefix
